--- a/src/index.pug
+++ b/src/index.pug
@@ -1,9 +1,25 @@
-doctype html
-html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(http-equiv="X-UA-Compatible", content="IE=edge")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title Document
-  body 
-    h1 Hi my name is Margarita!
+-
+  var peopleList = [
+      {
+        name: "Ioana",
+        age: 18
+      },
+      {
+        name: "Maria",
+        age: 23
+      },
+      {
+        name: "Andreea",
+        age: 5
+      },
+  ]
+table(border=1)
+  thead
+    tr 
+      td Name 
+      td Age 
+  tbody 
+    each people in peopleList
+      tr 
+        td= people.name 
+        td= people.age  
