pug update 10martie

--- a/src/attributes/attribute-interpolation.pug
+++ b/src/attributes/attribute-interpolation.pug
@@ -1,6 +1,6 @@
 - var myUrl  = 'http://codetap.io/cv'
-a(href=myUrl) Click to downloadyour free CV template
-- var myURL = 'contact.html'
+a(href=myUrl) Click to download your free CV template
+- var myURL = 'contact'
 |
 |
-a(href=myUrl) Contact Me
+a(href=myUrl + '.html?a=2') Contact Me
