--- a/src/attributes/boolean.pug
+++ b/src/attributes/boolean.pug
@@ -1,7 +1,11 @@
+doctype html
 input(type="text" checked)
 |
 |
 input(type="radio" checked=true)
 |
 |
-input(type="text" checked=false)
+input(type="radio" checked=false)
+|
+|
+input(type="radio" checked=true && 'checked') 
